app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  justify-content: space-between;
  background-color:rgba(255,255,255,0);
  position: fixed;
  width: 100%;
  display:flex;
  justify-content: space-between;
  font-weight: bold;
}

.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}

.navbar-lewagon .navbar-brand {
  font-family: "Work Sans", "Helvetica", "sans-serif";
  opacity: 60%;
  font-size: 120%;
}

